# docmind

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py  pyproject.toml
apps/api/src/docmind_api/: auth.py  db.py  main.py  models.py
apps/api/tests/: test_main.py
apps/worker/: pyproject.toml
docs/decisions/: ADR-001-embedding-model-selection.md  ADR-002-hybrid-retrieval.md
docs/observations/: chunking-strategies.md  evals-results.md  hybrid-search.md  ingestion-pipeline.md
infra/docker/: docker-compose.yml
migrations/: 001_tenants.sql
src/: main.py
