[project]
name = "docmind"
version = "0.1.0"
description = "Multi-tenant RAG-as-a-service platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/core",
    "packages/evals",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc"]
mypy_path = "packages/core/src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "apps/api/tests",
    "apps/worker/tests",
    "packages/core/tests",
    "packages/evals/tests",
]
