[project]
name = "docmind-api"
version = "0.1.0"
description = "FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "docmind-core",
    "fastapi>=0.136.1",
    "litellm>=1.85.0",
    "uvicorn>=0.47.0",
]

[tool.uv.sources]
docmind-core = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
