[project]
name = "docmind-worker"
version = "0.1.0"
description = "Kafka worker service"
requires-python = ">=3.12"
dependencies = [
    "docmind-core",
]

[tool.uv.sources]
docmind-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docmind_worker"]
